# tfm_2025

./: .gitignore  README.md  TFM_sandbox.ipynb  main.py  pyproject.toml
doc/: architecture.md  functionality.md
src/: benchmark_evaluator.py  config.py  data_manager.py  main.py  prompt_generator.py  visualizer.py
