[project]
name = "tfm-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "jupyter>=1.1.1",
    "jupyter-nbextensions-configurator>=0.6.4",
    "openai>=1.99.9",
    "optimum>=1.27.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
]
